# PewPew

./: .gitignore  README.md  ccs.theia-workspace  launchpad.c  sensortag.c  uart_messages.py
desktop/: Cargo.toml
launchpad/: .ccsproject  .cproject  .gitignore  (+4 more)
pewpew/: .gitignore  Cargo.toml
pewpew/src/: cancel_token.rs  lib.rs  main.rs  message.rs  user_settings.rs
pewpew/src/comm/: gui.rs  hitreg.rs  message.rs  mod.rs  serial.rs
pewpew/src/common/: mod.rs
pewpew/src/gui/: gui_context.rs  mod.rs  resources.rs
pewpew/src/gui/components/: hitbox.rs  mod.rs  movement.rs  point_with_alignment.rs  texture.rs  timer.rs
pewpew/src/gui/engine/: event.rs  gui_context.rs  mod.rs  resources.rs  stopwatch.rs
pewpew/src/gui/engine/components/: action.rs  condition.rs  hitbox.rs  mod.rs  movement.rs  point_with_alignment.rs  text.rs  texture.rs  timer.rs
pewpew/src/gui/engine/systems/: draw_texts.rs  draw_textures.rs  flashing_sequence.rs  mod.rs  update_animated_textures.rs  update_movements.rs  work_actions.rs  work_conditions.rs  work_timers.rs
pewpew/src/gui/scenes/: game.rs  intro.rs  mod.rs  pregame.rs  sandbox.rs  scoreboard.rs
pewpew/src/gui/scenes/common/: magazine.rs  mod.rs  scenery.rs
pewpew/src/gui/scenes/pregame/: mod.rs
pewpew/src/gui/systems/: draw_hitboxes.rs  draw_texts.rs  draw_textures.rs  flashing_sequence.rs  mod.rs  update_animated_textures.rs  update_movements.rs  work_timers.rs
pewpew/src/hitreg/: mod.rs
pewpew/src/message/: brightness.rs  mod.rs  reload.rs  shot.rs
pewpew/src/serial/: config.rs  mod.rs  packet.rs  reader.rs
(+122 files in other folders)
