[package]
name = "pewpew"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.2"
rand = "0.9.2"

# basic logging interface in rust
log = "0.4.27"

# logger that implements log interface and is configured through env vars
env_logger = "0.11.8"

# some entity-component-system library
hecs = "0.10.5"

# all things graphics
sdl2 = { version = "0.38.0", features = ["image", "ttf"] }
